pts_Graph: Fix alignment within radar overview graph for top indicators

--- a/pts-core/results-viewer/phoronix-test-suite.css
+++ b/pts-core/results-viewer/phoronix-test-suite.css
@@ -20,8 +20,8 @@ div#pts_container
 	text-align: left;
 	min-width: 940px;
 	background: #FFF;
-	width: 80%;
-	margin: 10px auto 30px;
+	width: 90%;
+	margin: 20px auto 30px;
 	overflow: hidden;
 	border: 1px solid #D7D7D7;
 	box-shadow: 1px 1px 4px #000;
